2006-09-22  Michael Schlenker <mic42@users.sourceforge.net>
	* ldap.test	Added some more smoketests for the public
			API, so that at least some brokenness is
			detected.

2006-09-20  Michael Schlenker <mic42@users.sourceforge.net>
        * ldap.tcl      Completly redone broken error handling in
          pkgIndex.tcl  the fileevent handler, now it no
          ldap.man      longer calls bgerror but cleans up
                        the outstanding messages for the
                        connection and delivers the error
                        to those waiting handlers. More stupid
                        typo fixes.
        
2006-09-20  Michael Schlenker <mic42@users.sourceforge.net>
        * ldapx.tcl     Some bugfixes for error handling
          ldap.tcl      when searchInit is called with invalid
          ldap.man      arguments. Thanks to Pierre David 
          pkgIndex.tcl  <pdav@users.sourceforge.net> for finding
                        them.

2006-09-15  Michael Schlenker <mic42@users.sourceforge.net>
        * ldapx.tcl     Some more fixes in the ldif part.
        
2006-09-15  Michael Schlenker <mic42@users.sourceforge.net>
        * ldapx.tcl     Imported some bug fixes from a new
          ldapx.man     version of ldapx by Pierre David.
          pkgIndex.tcl  Fixed bug in modifyDN, fixed wrong start
                        of SASL handshake, some mechanisms require
                        the client to send first.
          
2006-09-15  Michael Schlenker <mic42@users.sourceforge.net>
        * ldap.tcl      Fixed broken length calculation in message receiver.
          pkgIndex.tcl  This fixes bug [SF Tcllib Bug 1558564].
                        Fixed various smaller bugs with upvaring handles
                        in info functions.
                        Fixed wrong debug setting.
                        
2006-09-11  Michael Schlenker <mic42@users.sourceforge.net>
        * ldap.tcl      Fixed missing tlsHandshakeInProgress variable when